force-app/main/default/objects/WebCart/fields/AbandonedActiveEmailSent__c.field-meta.xml
<CustomField>
    <fullName>AbandonedActiveEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandoned Active Email Sent</label>
    <type>Checkbox</type>
</CustomField>