force-app/main/default/objects/WebCart/fields/AbandonedCheckoutEmailSent__c.field-meta.xml
<CustomField>
    <fullName>AbandonedCheckoutEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandoned Checkout Email Sent</label>
    <type>Checkbox</type>
</CustomField>